--- a/php/composer.json
+++ b/php/composer.json
@@ -8,6 +8,9 @@
             "": [
                 ".",
                 "tests"
+            ],
+            "TennisGame\\": [
+                "src"
             ]
         }
     }
